<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EasySolutionDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="feddback_hint_text">Please let us know how can we help</string>
    <string name="submit">Submit</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="next">NEXT</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_privacy">Privacy</string>
    <string name="title_privacy">Privacy Policy</string>

    <string name="title_privacy_para1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="title_privacy_para2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="title_privacy_para3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="title_privacy_para4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="confirmation_text1">A text message with code was</string>
    <string name="confirmation_text2">sent to your phone</string>
    <string name="country_number">+91</string>
    <string name="sms_code">Enter code</string>
    <string name="resend_code">Resend code</string>
    <string name="title_activity_home">Home</string>


</resources>
